Modify problemSection mobile bug

--- a/app/newhome/components/problemSection/problemSection.scss
+++ b/app/newhome/components/problemSection/problemSection.scss
@@ -50,60 +50,63 @@ $container-width: 1080px;
 
 .sliderContainer {
   padding: 50px 0;
+}
 
-  .sliderItem {
-    margin: 20px 10px;
-    padding: 0 16px;
-    width: 480px;
-    height: 165px;
-    border-radius: 10px;
-    background-color: #ffffff;
-    box-shadow: 0 4px 15px 0 rgba(216, 221, 231, 0.64);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+@media (max-width: 768px) {
+  .sliderWrapper {
+    padding: 25px 15px 130px 15px;
+  }
+}
+.sliderItem {
+  margin: 20px 10px;
+  padding: 0 16px;
+  width: 480px;
+  height: 165px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 15px 0 rgba(216, 221, 231, 0.64);
 
-    .iconWrapper {
-      flex: 1 0 132px;
-      svg {
-        width: 132px;
-      }
-    }
+  display: flex !important;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 
-    .itemText {
-      flex: 1 1 auto;
-      font-size: 16px;
-      font-weight: 300;
-      line-height: 1.78;
-      letter-spacing: -0.8px;
-      text-align: left;
-      color: #0c1020;
+  .iconWrapper {
+    flex: 1 0 132px;
+    svg {
+      width: 132px;
     }
   }
 
-  @media (max-width: 768px) {
-    padding: 25px 15px 130px 15px;
-    .sliderItem {
-      margin: 10px 0;
-      padding: 0 15px;
-      width: 100%;
-      height: 100px;
-      border-radius: 6px;
-      box-shadow: 0 2.5px 9px 0 rgba(216, 221, 231, 0.64);
+  .itemText {
+    flex: 1 1 auto;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.78;
+    letter-spacing: -0.8px;
+    text-align: left;
+    color: #0c1020;
+  }
 
-      .iconWrapper {
-        flex: 1 0 80px;
-        svg {
-          width: 64px;
-        }
+  @media (max-width: 768px) {
+    margin: 10px 0;
+    padding: 0 15px;
+    width: 100%;
+    height: 100px;
+    border-radius: 6px;
+    box-shadow: 0 2.5px 9px 0 rgba(216, 221, 231, 0.64);
+
+    .iconWrapper {
+      flex: 1 0 80px;
+      svg {
+        width: 64px;
       }
-      .itemText {
-        font-size: 12px;
-        font-weight: 300;
-        line-height: 1.68;
-      }
+    }
+    .itemText {
+      font-size: 12px;
+      font-weight: 300;
+      line-height: 1.68;
     }
   }
 }
